@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1419</width>
+    <width>1704</width>
     <height>769</height>
    </rect>
   </property>
@@ -93,7 +93,7 @@
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="1,0,0,0,1">
+       <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="0,0,1">
         <item>
          <widget class="QGroupBox" name="tasks_groupBox">
           <property name="title">
@@ -210,13 +210,6 @@
             </layout>
            </item>
           </layout>
-         </widget>
-        </item>
-        <item>
-         <widget class="Line" name="line_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
          </widget>
         </item>
         <item>
@@ -394,13 +387,6 @@ p, li { white-space: pre-wrap; }
             </layout>
            </item>
           </layout>
-         </widget>
-        </item>
-        <item>
-         <widget class="Line" name="line">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
          </widget>
         </item>
         <item>
