@@ -1681,7 +1681,7 @@ class VersionCreatorTester(unittest2.TestCase):
         # level items in tasks_treeWidget
 
         dialog = version_creator.MainDialog()
-        # self.show_dialog(dialog)
+        self.show_dialog(dialog)
 
         # set the current item to task1
         # get the corresponding item
